--- a/ECommercePrototypeEnjo/ECommercePrototypeEnjo.WebClient/Views/Home/Index.cshtml
+++ b/ECommercePrototypeEnjo/ECommercePrototypeEnjo.WebClient/Views/Home/Index.cshtml
@@ -16,10 +16,9 @@
         <div id="productsGrid"></div>
     </div>
     <div class="col-lg-4">
-        <h3>Basket</h3>
-        <div style="display:block;"><strong style="width:100px">Product *quantity</strong><strong style="width:100px">Price $</strong></div>
+        <h3>Shopping Cart</h3>
+        @*<div style="display:block;"><strong style="width:100px">Product *quantity</strong><strong style="width:100px">Price $</strong></div>*@
         <div id="basketGrid">
-
         </div>
     </div>
 </div>
@@ -43,7 +42,7 @@
             request.onload = function () {
 
                 var response = request.response;
-                var template = '<div class="col-lg-4" style="text-align: center; margin-top:10px; height:300px;"><div style="width:200px; height:250px;"><img style=" width:100%; height:70%;display:block;" src="{THUMBNAIL}" /><h5>{TITLE}</h5><span>{PRICE}$</span></div><div style="width:200px; height:50px;"><input type="number" data-product-id="{ID}" placeholder="Quantity" style="width: 75px;"/><button data-product-id="{ID}" onClick="addToBasket(this);">Add to basket</button></div></div>';
+                var template = '<div class="col-lg-4" style="text-align: center; margin-top:10px; height:300px;"><div style="width:200px; height:250px;"><img style=" width:100%; height:70%;display:block;" src="{THUMBNAIL}" /><h5>{TITLE}</h5><span>{PRICE}$</span></div><div style="width:200px; height:50px;"><input type="number" class="form-control-quantity" data-product-id="{ID}" placeholder="Quantity" style="width: 75px;"/><button class="btn btn-success" data-product-id="{ID}" onClick="addToBasket(this);">Add to Cart</button></div></div>';
 
                 $(response).each(function (index) {
 
@@ -131,8 +130,14 @@
 
             request.onload = function () {
                 var response = request.response;
-                var template = '<div style="display:block; width:300px;"><span>{PRODUCT_TITLE} *{QUANTITY}</span><span style="width:100px">{CART_ITEM_PRICE}$</span><button onClick="removeFromBasket({ID});">Remove</button><button onClick="updateProductQuantity({ID},{QUANTITY+1});">+</button><button onClick="updateProductQuantity({ID},{QUANTITY-1});">-</button></div>';
+               
+                var template = '<tr><td width="30px"><a href="javascript:removeFromBasket({ID});"><img src="/Content/imgs/btn-delete.png" style="height: 20px; width: 20px;" /></a></td><td width="250px;"><span>{PRODUCT_TITLE} ({QUANTITY})</span></td><td><span style="width:100px">{CART_ITEM_PRICE}$</span></td><td><a href="javascript:updateProductQuantity({ID},{QUANTITY+1});"><img src="/Content/imgs/add2.png" style="height: 20px; width: 20px;" /></a><a href="javascript:updateProductQuantity({ID},{QUANTITY-1});"><img src="/Content/imgs/btn-remove.png" style="height: 20px; width: 20px;" /></a></td></tr>';
                 $('#basketGrid').html('');
+
+                if (response.ShoppingCartItems.length == 0) {
+                    $('#basketGrid').html('Cart is empty.');
+                    return;
+                }
 
                 $(response.ShoppingCartItems).each(function (index) {
                     var item = template.replace('{PRODUCT_TITLE}', this.ProductTitle)
@@ -143,7 +148,7 @@
                 });
 
                 $('#basketGrid').append('<div style="display:block;"><strong>Total Price</strong><strong style="float: right;">' + response.TotalPrice + '$</strong></div>');
-                $('#basketGrid').append('<div style="display:block;"><button onClick="clearBasket();">Clear Basket</button></div>');
+                $('#basketGrid').append('<div style="display:block;"><button class="btn" onClick="clearBasket();"><img src="/Content/imgs/cart.gif" style="height: 20px; width: 20px;" /> Clear Basket</button></div>');
             };
 
             request.send();
@@ -165,7 +170,25 @@
 
             request.send();
         }
-      
 
     </script>
 }
+
+
+<style>
+    .form-control-quantity {
+        padding: 6px 2px;
+        color: #555555;
+        vertical-align: middle;
+        background-color: #ffffff;
+        border: 1px solid #cccccc;
+        border-radius: 4px;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+        font-size: 14px;
+        line-height: 1.428571429;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+        -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+        transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+        margin-right: 5px;
+    }
+</style>
