--- a/ECommercePrototypeEnjo/ECommercePrototypeEnjo.WebClient/Views/Home/Index.cshtml
+++ b/ECommercePrototypeEnjo/ECommercePrototypeEnjo.WebClient/Views/Home/Index.cshtml
@@ -2,12 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 
-
-
 <div class="jumbotron">
     <h1>ECommerce Enjo (Prototype)</h1>
     <p class="lead">Below are some products for demo purpose.</p>
-    @*<p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
 
 <div class="row" style="height:1000px;">
@@ -17,9 +14,7 @@
     </div>
     <div class="col-lg-4">
         <h3>Shopping Cart</h3>
-        @*<div style="display:block;"><strong style="width:100px">Product *quantity</strong><strong style="width:100px">Price $</strong></div>*@
-        <div id="basketGrid">
-        </div>
+        <div id="basketGrid"></div>
     </div>
 </div>
 
@@ -173,7 +168,6 @@
 
     </script>
 }
-
 
 <style>
     .form-control-quantity {
